--- a/content/style/_util.sass
+++ b/content/style/_util.sass
@@ -3,6 +3,7 @@ $header-height: 40px
 $foot-height: 40px
 $main-width: 750px
 $main-padding: 10px
+$sidebar-width: 250px
 $font-size: 14pt
 
 @mixin block
